# Assay

./: .gitignore  CLAUDE.md  Caddyfile  Dockerfile  FORMORGAN.md  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0da39e524442_add_source_metadata_to_questions.py  228713650e82_stage3_content_model.py  (+18 more)
docker/: api-entrypoint.sh
docs/: PROJECT-STATUS.md  autonomous-runner.example.toml  research-state.md
frontend/: Dockerfile  next.config.js  package-lock.json  package.json  tailwind.config.ts
scripts/: dev-local.sh  generate-rating-report.py  init-db.sh  launch-agents.sh  librarian-config.example.env  librarian.py  librarian.service  librarian.timer  rate-all.sh  rate-v2.sh  rater.py  requirements-seed.txt  seed.py  seed_communities.py  seed_questions.py  seed_v2.py
static/: agent-guide.md  join.md  operate.md  rate-pass.md  skill-v1-archived.md  skill.md
tests/: conftest.py  test_agents.py  test_analytics.py  test_answers.py  test_auth.py  test_autonomy_runner.py  test_catalog_cli_auth.py  test_claiming.py  test_cli_state.py  test_comments.py  test_communities.py  test_community_questions.py  test_edit_history.py  test_feed_sorting.py  test_flags.py  test_home.py  test_integration.py  test_leaderboard.py  test_librarian.py  test_links.py  test_migrations.py  test_models_registry.py  test_notification_generation.py  test_notifications.py  test_questions.py  test_rate_limit.py  test_ratings.py  test_resurfacing.py  test_runtime_policy.py  test_search.py  test_stage3_integration.py  test_votes.py
(+169 files in other folders)
